<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/black"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/num2"
        android:layout_width="366dp"
        android:layout_height="62dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="000"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="numberDecimal"
        android:onClick="clearTextNum"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/num"
        app:layout_constraintEnd_toEndOf="@+id/num"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="@+id/num"
        tools:ignore="EditableContentDescCheck" />

    <TextView
        android:id="@+id/result"
        android:layout_width="366dp"
        android:layout_height="62dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="result"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/num" />

    <EditText
        android:id="@+id/num"
        android:layout_width="366dp"
        android:layout_height="62dp"
        android:layout_marginTop="276dp"
        android:layout_marginBottom="81dp"
        android:contentDescription="000"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:onClick="clearTextNum2"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="EditableContentDescCheck" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/btn3"
        android:gravity="center"
        android:padding="0dp"
        android:onClick="doMod"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/button20"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toTopOf="@+id/button20"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/btn4"
        android:padding="0dp"
        android:onClick="doInv"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/button19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toTopOf="@+id/button19"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="11dp"
        android:text="@string/btn2"
        android:onClick="doPow"
        android:padding="0dp"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="151dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:text="@string/btn6"
        android:padding="10dp"
        android:onClick="doMul"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="11dp"
        android:padding="10dp"
        android:text="@string/btn8"
        android:onClick="doSum"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/button36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button20"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="151dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn7"
        android:onClick="doSub"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="151dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:text="@string/btn5"
        android:padding="10dp"
        android:onClick="doDiv"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button11"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="348dp"
        android:layout_height="106dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/btn1"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button36"
        android:layout_width="255dp"
        android:layout_height="59dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:padding="1dp"
        android:text="@string/btn9"
        android:onClick="clearText"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>